- added: @image('image.jpg', @width {Number}, @height {Number}, @alt {String}, className {String})
- added: @favicon('favicon.png')
- added: @json(@obj {Object}, @name {String | Optional})
- added: Number.padLeft(), Number.padRight()

- updated: @routeJS
- updated: @routeCSS
- updated: @routeImage
- updated: partial.js binary
- updated: String.padLeft(), String.padRight() - default char is ' '

- fixed: minify HTML
- fixed: @if
- fixed: problem with empty view
- fixed: ETagVersion

======= 1.2.1-3

- added: builders.default(schemaName)
- added: utils.noop()
- added: string.count('search text')
- added: string.parseDate()
- added: string.urlEncode()
- added: string.urlDecode()

- updated: clean code
- updated: decrease time expiration in views and templates

- fixed: LESS @import
- fixed: string.htmlEncode(), utils.htmlEncode()

======= 1.2.1-2

- fixed: file upload

======= 1.2.1-1

- added: condition to view engine @{if model.a === model.b} TRUE @{else} FALSE @{endif} (doesnt support nested condition)

======= 1.2.1-0

- added: node v0.10.0 compatibility
- added: framework - process SIGINT event

- fixed: markdown parse link and image
- fixed: template repository
- fixed: utils.request (node v0.10)

======= 1.2.0-9

- updated: framework.cache, added cache.removeAll(search)
- updated: SQLite schemaCreate, schemaDrop, renamed to: createSchema, deleteSchema
- updated: markdown delegates + added new function markdown.parse() (it is same as markdown.load())

- fixed: utils.extend()
- fixed: install module
- fixed: req.hostname(), problem with uri.port

======= 1.2.0-8

- added: sqlite ORM supports blob type
- added: framework.on('exit')
- added: markdown.load(text, name), @name parameter (such as helper to parser)

- updated: rename returnFile, returnContent, returnStatic, return404, return500: responseFile, responseContent, etc..
- updated: auto added first property name as primary key in builders schema (note: if not defined primary key)
- updated: clean code