@@ -345,7 +345,7 @@ Controller.prototype.ifNotModified = function(compare, strict) {
 		if (typeof(val) === 'undefined')
 			return false;
 
-		var myetag = compare + ':' + self.config.ETagVersion;
+		var myetag = compare + ':' + self.config.etagVersion;
 
 		if (val !== myetag)
 			return false;
@@ -390,7 +390,7 @@ Controller.prototype.setModified = function(value) {
 	var isEtag = typeof(value) === 'string';
 
 	if (isEtag) {
-		self.res.setHeader('Etag', value + ':' + self.config.ETagVersion);
+		self.res.setHeader('Etag', value + ':' + self.config.etagVersion);
 		return self;
 	}
 
