@@ -52,7 +52,7 @@ function Framework() {
 		name: 'partial.js',
 		secret: os.hostname() + '-' + os.platform() + '-' + os.arch(),
 
-		ETagVersion: '1',
+		etagVersion: '1',
 
 		directoryContents: '/contents/',
 		directoryControllers: '/controllers/',
@@ -1063,7 +1063,7 @@ Framework.prototype.responseFile = function(req, res, fileName, downloadName, he
 		return self;
 	}
 
-	var etag = (self.config.httpCache ? utils.Etag(req.url) : '') + ':' + self.config.ETagVersion;
+	var etag = (self.config.httpCache ? utils.etag(req.url) : '') + ':' + self.config.etagVersion;
 	
 	if (!self.config.debug) {
 		if (req.headers['if-none-match'] === etag) {
