@@ -491,7 +491,7 @@ exports.getContentType = function(ext) {
 	@text {String} :: filename
 	return {String}
 */
-exports.Etag = function(text) {
+exports.etag = function(text) {
 	var sum = 0;
 	for (var i = 0; i < text.length; i++)
 		sum += text.charCodeAt(i);
