@@ -15,6 +15,8 @@ IN DEVELOPMENT ======= 1.2.1-4
 - updated: partial.js binary
 - updated: String.padLeft(), String.padRight() - default char is ' '
 
+- renamed: utils.Etag and ETagVersion to: utils.etag() and config.etagVersion
+
 - fixed: minify HTML
 - fixed: @if
 - fixed: problem with empty view
